Use two digits for hours in SRT timecodes

BUG: 433193